fix: fix URL for adding menus and orders
