# docs/swagger.yaml
@@ -363,7 +363,22 @@ paths:
             type: object
       tags:
       - Authentication
-  /menu:
+  /menus:
+    get:
+      description: Récupérer tous les menus
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Menu'
+            type: array
+      security:
+      - BearerAuth: []
+      tags:
+      - Menus
     post:
       consumes:
       - application/json
@@ -394,22 +409,6 @@ paths:
             additionalProperties:
               type: string
             type: object
-      security:
-      - BearerAuth: []
-      tags:
-      - Menus
-  /menus:
-    get:
-      description: Récupérer tous les menus
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/models.Menu'
-            type: array
       security:
       - BearerAuth: []
       tags:
@@ -536,7 +535,22 @@ paths:
       - BearerAuth: []
       tags:
       - Menus
-  /order:
+  /orders:
+    get:
+      description: Récupérer toutes les commandes
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Order'
+            type: array
+      security:
+      - BearerAuth: []
+      tags:
+      - Orders
     post:
       consumes:
       - application/json
@@ -567,22 +581,6 @@ paths:
             additionalProperties:
               type: string
             type: object
-      security:
-      - BearerAuth: []
-      tags:
-      - Orders
-  /orders:
-    get:
-      description: Récupérer toutes les commandes
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/models.Order'
-            type: array
       security:
       - BearerAuth: []
       tags:
